--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,35 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCW96BJ-5U0Opx8YkkSGwhsi_uDZkj_04k",
+        authDomain: "mal-app-98b37.firebaseapp.com",
+        databaseURL: "https://mal-app-98b37.firebaseio.com",
+        projectId: "mal-app-98b37",
+        appId: "1:756562440318:web:e0fc2b355daf6baab6282f",
+        measurementId: "G-M9G1TG8WLG"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      // firebase.analytics();
+
+      // make auth and firestore references
+      const auth = firebase.auth();
+      const db = firebase.firestore();
+
+      // update firestore settings
+      // db.settings({ timestampsInSnapshots: true });
+    </script>
   </body>
 </html>
